Blog smal lscreen fix and Ipad align issue

--- a/src/styles/Blog.module.css
+++ b/src/styles/Blog.module.css
@@ -70,7 +70,6 @@
 .main nav.header {
   display: flex;
   justify-content: center;
-  flex-direction: column;
   width: 100%;
 }
 .main .content h2,
@@ -221,6 +220,19 @@
   object-fit: cover;
 }
 /* LARGE Mobile to tablet */
+@media (max-width: 600px) {
+  .main header nav menu div nav,
+  .main header nav menu aside {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .main footer div nav {
+    flex-wrap: wrap;
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+}
+
 @media (min-width: 400px) {
   .main header,
   .main article .inner {
